<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">SSH Remote</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="error_format">Error: %s</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="undo">Undo</string>
    <string name="rename">Rename</string>
    <string name="reorder">Reorder</string>
    <string name="clear">Clear</string>
    <string name="more">More</string>
    <string name="more_options">More options</string>
    <string name="back">Back</string>
    <string name="go_back">Go back</string>
    <string name="navigate_back">Navigate back</string>
    <string name="message">Message</string>
    <string name="name">Name</string>
    <string name="name_optional">Name (optional)</string>
    <string name="loading">Loading…</string>
    <string name="update">Update</string>
    <string name="merge">Merge</string>
    <string name="duplicate">Duplicate</string>
    <string name="replace">Replace</string>
    <string name="cont">Continue</string>
    <string name="permission_denied">Permission denied</string>
    <string name="reset">Reset</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="discard_and_leave">Discard and leave</string>
    <string name="please_wait">Please wait…</string>
    <string name="link_destination">Link Destination</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="toggle_word_wrap">Toggle word wrap</string>
    <string name="custom">Custom</string>
    <string name="search">Search</string>
    <string name="search_no_matches">No matches found</string>
    <string name="search_match_position">Match %1$d of %2$d</string>
    <string name="search_next_match">Next match</string>
    <string name="hosts_title">Hosts</string>
    <string name="no_ssh_hosts_added_yet">No SSH hosts added yet.</string>
    <string name="empty_list_add_prompt">Tap the + button to add one.</string>
    <string name="connect_to_host">Connect to %s</string>
    <string name="add_ssh_host">Add SSH Host</string>
    <string name="add_host_title">Add Host</string>
    <string name="edit_host_title">Edit Host</string>
    <string name="host_deleted">Host deleted</string>
    <string name="clone">Clone</string>
    <string name="hostname_or_ip">Hostname or IP</string>
    <string name="port">Port</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="hide_password">Hide password</string>
    <string name="show_password">Show password</string>
    <string name="password_lost">Password lost</string>
    <string name="password_saved">Password saved</string>
    <string name="passwords_not_backed_up">Passwords are not backed up, please re-enter</string>
    <string name="enter_new_password_or_empty">Enter a new password, or leave empty to clear it</string>
    <string name="optional_password_prompt">Optional, will be prompted for if not provided</string>
    <string name="optional">Optional</string>
    <string name="re_enter">Re-enter</string>
    <string name="change_or_clear">Change or Clear</string>
    <string name="unsaved_changes_title">Unsaved changes</string>
    <string name="unsaved_changes_text">Do you want to save the host before leaving?</string>
    <string name="save_and_leave">Save and leave</string>
    <string name="stay">Stay</string>
    <string name="connection_error">Connection Error</string>
    <string name="host_key_verification">Host Key Verification</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="saved_host_keys">Saved host keys: %d</string>
    <string name="connection_details_only">Connection details only</string>
    <string name="identity_info_format">%1$s - %2$s</string>
    <string name="select_host">Select a host</string>
    <string name="no_hosts_found">No hosts found</string>
    <string name="tab_remote">Remote</string>
    <string name="tab_mouse">Mouse</string>
    <string name="tab_keyboard">Keyboard</string>
    <string name="tab_commands">Commands</string>
    <string name="edit_remote_control">Edit remote control</string>
    <string name="edit_remote_to_add_commands">Edit the remote control to add commands.</string>
    <string name="remote_control_group">Remote control</string>
    <string name="select_preset">Select preset</string>
    <string name="no_preset">No preset</string>
    <string name="unsaved_changes_remote_control_text">Do you want to save your changes before leaving?</string>
    <string name="reset_commands_title">Reset commands?</string>
    <string name="reset_commands_text">This will reset all remote control commands to their default %s values.</string>
    <string name="reset_to_preset_title">Reset to preset</string>
    <string name="set_as_default_tab">Set as default tab</string>
    <string name="ad_hoc_command">Ad-hoc command</string>
    <string name="ad_hoc_command_title">Ad-Hoc Command</string>
    <string name="command">Command</string>
    <string name="execute">Execute</string>
    <string name="command_output">Command Output</string>
    <string name="command_output_label">Command output</string>
    <string name="show_output">Show output</string>
    <string name="render_output_as_markdown">Render output as Markdown</string>
    <string name="clear_history">Clear history</string>
    <string name="no_commands_added">No commands have been added.</string>
    <string name="add_command">Add Command</string>
    <string name="edit_command">Edit Command</string>
    <string name="command_deleted">Command deleted</string>
    <string name="repeat_command_while_pressed">Repeat command while button is pressed</string>
    <string name="long_press_command">Long press command</string>
    <string name="tap_long_press_tab">Tap / long press</string>
    <string name="press_release_tab">Press / release</string>
    <string name="press_release_mode_description">Use these commands to run one action when the button is pressed down and another when it is released.</string>
    <string name="press_command">Press command</string>
    <string name="release_command">Release command</string>
    <string name="configure_physical_keys">Configure physical keys</string>
    <string name="physical_key_bindings_description">These bindings are only active on the Remote tab.</string>
    <string name="bind_physical_key">Bind physical key</string>
    <string name="press_physical_key_now">Press a physical key now…</string>
    <string name="tap_bound_key_to_remove">Tap a bound key to remove it.</string>
    <string name="rebind_physical_key_title">Rebind physical key?</string>
    <string name="rebind_physical_key_message">This key is already bound to %1$s. Rebind it to %2$s instead?</string>
    <string name="rebind">Rebind</string>
    <string name="command_is_not_a_tap_command">Command is not a tap command.</string>
    <string name="key_title_format">Key: %s</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="exit_fullscreen">Exit fullscreen</string>
    <string name="disconnect">Disconnect</string>
    <string name="configure_remote_commands_prompt">Please configure the remote control commands by entering edit mode via the menu.</string>
    <string name="tap_to_edit_button_command">Tap a button to edit its command</string>
    <string name="run_command_in_background">Run command in background</string>
    <string name="shortcut_label">Shortcut label</string>
    <string name="connecting">Connecting…</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="executing_command">Executing command…</string>
    <string name="executing_on">Executing on %s</string>
    <string name="sharing_to">Sharing to %s</string>
    <string name="smart_volume_settings">Smart volume settings</string>
    <string name="read_current_volume">Read current volume</string>
    <string name="show_volume_slider">Show volume slider</string>
    <string name="control_volume_with_hardware_buttons">Control volume with hardware buttons</string>
    <string name="test_pactl">Test pactl</string>
    <string name="pactl_installation_requirement">Requires that pactl is installed.</string>
    <string name="error_reading_volume">Error reading volume. Please install pactl.</string>
    <string name="volume_format">Volume: %s</string>
    <string name="volume_muted_format">Volume: %s (muted)</string>
    <string name="allow_local_network_access">Allow local network access</string>
    <string name="local_network_access_permission_explanation">This host is on your local network. Android will now show a permission prompt asking if this app should be allowed to make connections to local devices.\n\nTap \"Allow\" to continue.</string>
    <string name="key_back">Back</string>
    <string name="key_home">Home</string>
    <string name="key_menu">Menu</string>
    <string name="key_previous">Previous</string>
    <string name="key_play_pause">Play/Pause</string>
    <string name="key_next">Next</string>
    <string name="key_up">Up</string>
    <string name="key_right">Right</string>
    <string name="key_down">Down</string>
    <string name="key_left">Left</string>
    <string name="key_select">Select</string>
    <string name="key_volume_down">Volume Down</string>
    <string name="key_mute">Mute</string>
    <string name="key_volume_up">Volume Up</string>
    <string name="mouse_pad">Mouse Pad</string>
    <string name="mouse_pad_disabled">Mouse Pad Disabled</string>
    <string name="mouse_commands_not_configured">Mouse commands not configured</string>
    <string name="left_click">Left Click</string>
    <string name="right_click">Right Click</string>
    <string name="tap_to_edit_mouse_commands">Tap to edit mouse commands</string>
    <string name="tap_to_left_click">Tap to left click</string>
    <string name="long_press_to_click_and_drag">Long press to click and drag</string>
    <string name="long_press_two_fingers_to_right_click">Long press with two fingers to right click</string>
    <string name="scroll_using_two_fingers">Scroll using two fingers</string>
    <string name="edit_mouse_commands">Edit Mouse Commands</string>
    <string name="key_mouse_move">Mouse Move</string>
    <string name="key_mouse_left_down">Left Button Down</string>
    <string name="key_mouse_left_up">Left Button Up</string>
    <string name="key_mouse_right_down">Right Button Down</string>
    <string name="key_mouse_right_up">Right Button Up</string>
    <string name="key_mouse_pan_up">Two-Finger Pan Up</string>
    <string name="key_mouse_pan_down">Two-Finger Pan Down</string>
    <string name="key_mouse_pan_left">Two-Finger Pan Left</string>
    <string name="key_mouse_pan_right">Two-Finger Pan Right</string>
    <string name="keyboard_commands_not_configured">Keyboard commands not configured</string>
    <string name="edit_keyboard_commands">Edit Keyboard Commands</string>
    <string name="key_esc">Esc</string>
    <string name="key_tab">Tab</string>
    <string name="key_ctrl">Ctrl</string>
    <string name="key_alt">Alt</string>
    <string name="key_shift">Shift</string>
    <string name="key_super">Super</string>
    <string name="key_caps">Caps</string>
    <string name="key_del">Del</string>
    <string name="key_pageup">PgUp</string>
    <string name="key_pagedown">PgDn</string>
    <string name="key_end">End</string>
    <string name="key_keyboard_type_text">Keyboard Type Text</string>
    <string name="key_keyboard_key_press">Keyboard Key Press</string>
</resources>