<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingHorizontal="4dp"
    android:paddingVertical="@dimen/notification_vertical_padding">

    <!-- Dpad -->
    <RelativeLayout
        android:layout_width="@dimen/notification_dpad_container_size"
        android:layout_height="@dimen/notification_dpad_container_size">

        <ImageButton
            android:id="@+id/button_up"
            android:layout_width="@dimen/notification_button_size"
            android:layout_height="@dimen/notification_button_size"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_outline"
            android:contentDescription="@string/key_up"
            android:padding="@dimen/notification_dpad_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_keyboard_arrow_up" />

        <ImageButton
            android:id="@+id/button_left"
            android:layout_width="@dimen/notification_button_size"
            android:layout_height="@dimen/notification_button_size"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_outline"
            android:contentDescription="@string/key_left"
            android:padding="@dimen/notification_dpad_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_keyboard_arrow_left" />

        <ImageButton
            android:id="@+id/button_select"
            android:layout_width="@dimen/notification_button_size"
            android:layout_height="@dimen/notification_button_size"
            android:layout_centerInParent="true"
            android:background="@drawable/button_outline"
            android:contentDescription="@string/key_select"
            android:padding="@dimen/notification_dpad_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_radio_button_unchecked" />

        <ImageButton
            android:id="@+id/button_right"
            android:layout_width="@dimen/notification_button_size"
            android:layout_height="@dimen/notification_button_size"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_outline"
            android:contentDescription="@string/key_right"
            android:padding="@dimen/notification_dpad_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_keyboard_arrow_right" />

        <ImageButton
            android:id="@+id/button_down"
            android:layout_width="@dimen/notification_button_size"
            android:layout_height="@dimen/notification_button_size"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_outline"
            android:contentDescription="@string/key_down"
            android:padding="@dimen/notification_dpad_button_padding"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_keyboard_arrow_down" />

    </RelativeLayout>

    <!-- Action Buttons -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/button_back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/notification_button_size"
            android:background="@drawable/button_outline"
            android:contentDescription="@string/key_back"
            android:src="@drawable/ic_arrow_back" />

        <ImageButton
            android:id="@+id/button_home"
            android:layout_width="match_parent"
            android:layout_height="@dimen/notification_button_size"
            android:background="@drawable/button_outline"
            android:contentDescription="@string/key_home"
            android:src="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/button_play_pause"
            android:layout_width="match_parent"
            android:layout_height="@dimen/notification_button_size"
            android:background="@drawable/button_outline"
            android:contentDescription="@string/key_play_pause"
            android:src="@drawable/ic_play_pause" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/button_volume_up"
            android:layout_width="match_parent"
            android:layout_height="@dimen/notification_button_size"
            android:background="@drawable/button_outline"
            android:contentDescription="@string/key_volume_up"
            android:src="@drawable/ic_volume_up" />

        <ImageButton
            android:id="@+id/button_mute"
            android:layout_width="match_parent"
            android:layout_height="@dimen/notification_button_size"
            android:background="@drawable/button_outline"
            android:contentDescription="@string/key_mute"
            android:src="@drawable/ic_volume_off" />

        <ImageButton
            android:id="@+id/button_volume_down"
            android:layout_width="match_parent"
            android:layout_height="@dimen/notification_button_size"
            android:background="@drawable/button_outline"
            android:contentDescription="@string/key_volume_down"
            android:src="@drawable/ic_volume_down" />
    </LinearLayout>

</LinearLayout>
